Update to version 7.1.2, remove no longer needed deletion of DOCS-SDKs folder, fix typo

--- a/7.1/jdk8/Dockerfile
+++ b/7.1/jdk8/Dockerfile
@@ -7,7 +7,7 @@ LABEL maintainer="Lightstreamer Server Development Team <support@lightstreamer.c
 RUN gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 9B90BFD14309C7DA5EF58D7D4A8C08966F29B4D2
 
 # Set environment variables to identify the right Lightstreamer version and edition
-ENV LIGHTSTREAMER_VERSION 7_1_1_20200527
+ENV LIGHTSTREAMER_VERSION 7_1_2
 ENV LIGHTSTREAMER_URL_DOWNLOAD http://www.lightstreamer.com/repo/distros/Lightstreamer_${LIGHTSTREAMER_VERSION}.tar.gz
 
 # Download the package from the Lightstreamer site, verify the signature, and unpack
@@ -25,12 +25,10 @@ RUN set -ex; \
                   -e '/<logger name="LightstreamerLogger.license/,+2s/<appender-ref ref="LSConsole" \/>/<!-- <appender-ref ref="LSConsole" \/> -->/' \
                   -e '/<logger name="LightstreamerProxyAdapters/,+2s/<appender-ref ref="LSConsole" \/>/<!-- <appender-ref ref="LSConsole" \/> -->/' \
                   conf/lightstreamer_log_conf.xml \
-# Remove unneeded folder
-        && rm -fr /lightstreamer/DOCS-SDKs \
 # Add new user and group
         && groupadd -r -g 10000 lightstreamer \
         && useradd --no-log-init -r -g lightstreamer -u 10000 lightstreamer \
-# Change ownership of tye lightstreamer folder
+# Change ownership of the lightstreamer folder
         && chown -R lightstreamer:lightstreamer ../lightstreamer \
 # Finally, remove no longer needed files
         && rm Lightstreamer.tar.gz Lightstreamer.tar.gz.asc
